--- a/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISweepstakeManager.cs" />
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Simulation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sweepstakes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
