--- a/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Simulation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SweepstakeQueueManager.cs" />
     <Compile Include="Sweepstakes.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
